--- a/meadowlark.html
+++ b/meadowlark.html
@@ -10,16 +10,16 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="meadowlark.html" class="current-page">meadowlark</a>
+          <a href="meadowlark.html" class="current-page">Meadowlark</a>
         </li>
         <li>
-          <a href="canary.html">canary</a>
+          <a href="canary.html">Canary</a>
         </li>
         <li>
-          <a href="rooster.html">most elusive bird</a>
+          <a href="rooster.html">Most Elusive Bird</a>
         </li>
       </ul>
     </nav>
@@ -37,7 +37,7 @@
           alt="Yellow Meadowlark"
         />
         <!-- Audio of bird -->
-        <audio controls> <source src="assets\sounds\meadowlark.mp3" type="audio/mpeg">
+        <audio autoplay loop controls> <source src="assets\sounds\meadowlark.mp3" type="audio/mpeg">
         <source src="assets\sounds\meadowlark.wav" type="audio/wav">
         <p>Your browser doesn't support HTML audio. Here is a <a href="assets\sounds\meadowlark.mp3">link to the audio</a> instead.</p>
         </audio>
