--- a/canary.html
+++ b/canary.html
@@ -10,16 +10,16 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="meadowlark.html">meadowlark</a>
+          <a href="meadowlark.html">Meadowlark</a>
         </li>
         <li>
-          <a href="canary.html" class="current-page">canary</a>
+          <a href="canary.html" class="current-page">Canary</a>
         </li>
         <li>
-          <a href="rooster.html">most elusive bird</a>
+          <a href="rooster.html">Most Elusive Bird</a>
         </li>
       </ul>
     </nav>
@@ -34,7 +34,7 @@
         <!-- Image of bird -->
         <img src="assets\images\canary.jpg" alt="Yellow Canary" />
         <!-- Audio of bird -->
-        <audio controls src="assets\sounds\canary.mp3">
+        <audio autoplay loop controls src="assets\sounds\canary.mp3">
           Your browser does not support the <code>audio</code> element.
         </audio>
         <div>
