--- a/rooster.html
+++ b/rooster.html
@@ -10,16 +10,16 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="meadowlark.html">meadowlark</a>
+          <a href="meadowlark.html">Meadowlark</a>
         </li>
         <li>
-          <a href="canary.html">canary</a>
+          <a href="canary.html">Canary</a>
         </li>
         <li>
-          <a href="rooster.html" class="current-page">most elusive bird</a>
+          <a href="rooster.html" class="current-page">Most Elusive Bird</a>
         </li>
       </ul>
     </nav>
@@ -34,7 +34,7 @@
         <!-- Image of bird -->
         <img src="assets\images\rooster.jpg" alt="Rooster" />
         <!-- Audio of bird -->
-        <audio controls loop>
+        <audio autoplay loop controls>
           <source src="assets\sounds\rooster.mp3" type="audio/mpeg" />
           <source src="assets\sounds\rooster.wav" type="audio/wav" />
           <p>
