--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bird Songs</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <nav>
-        <ul>
-            <li>
-                <a href="index.html" class="current-page">Home</a>
-            </li>
-            <li>
-                <a href="meadowlark.html">Meadowlark</a>
-            </li>
-            <li>
-                <a href="canary.html">Canary</a>
-            </li>
-            <li>
-                <a href="rooster.html">Most Elusive Bird</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="index.html" class="current-page">Home</a>
+        </li>
+        <li>
+          <a href="meadowlark.html">Meadowlark</a>
+        </li>
+        <li>
+          <a href="canary.html">Canary</a>
+        </li>
+        <li>
+          <a href="rooster.html">Most Elusive Bird</a>
+        </li>
+      </ul>
     </nav>
     <!-- Add main tag here -->
     <main>
-        <h1>Hi,Karson!</h1>
+      <h1>Hi, Karson!</h1>
     </main>
-</body>
+  </body>
 </html>
